added volume endpoints
